--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
         margin:0;
       }
     </style>
-    <title>React App</title>
+    <title>Loop Netcon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
